--- a/ReactRecipes/ReactRecipes.csproj
+++ b/ReactRecipes/ReactRecipes.csproj
@@ -11,10 +11,13 @@
     <SpaProxyServerUrl>https://localhost:44476</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>722212bf-595b-4480-856d-6b49ade8b784</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Text.Json" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
